# server/api/controllers/user/router.js
@@ -4,6 +4,8 @@ import controller from './controller';
 export default express
   .Router()
   .get('/getuserdata',controller.getUserDetails)
+  .post('/becomeaseller',controller.becomeASeller)
+  .post('/addaddress',controller.addAddress)
   
   
   
